--- a/src/404.html
+++ b/src/404.html
@@ -13,9 +13,7 @@
         <section class="bg-g1">
             <article>
                 <h1>
-                    <span class="c-red">4</span>
-                    <span class="c-orange">0</span>
-                    <span class="c-green">4</span>
+                    40<span class="c-purple">4</span>
                 </h1>
                 <p>Lost your way, you have</p>
                 <p>Lead you <a href="/">home</a>, I will</p>
