--- a/src/map.html
+++ b/src/map.html
@@ -3,8 +3,14 @@
     <head>
         {{ template "amp-boilerplate" }}
 
-        <title>Sean Liao</title>
-        <link rel="canonical" href="https://seankhliao.com">
+        {{ template "head" obj `
+{
+    "title":"Map | Sean Liao",
+    "description": "where Sean Liao has been",
+    "url": "seankhliao.com/map",
+    "imageUrl": ""
+}
+` }}
 
         <style amp-custom>
             {{ template "custom-css" }}
@@ -28,14 +34,20 @@
         </style>
     </head>
     <body>
+        <section class="bg-g1">
+            <header>
+                <h1>
+                    <a href="/">
+                        <i title="home" class="material-icons icon">home</i>
+                    </a>
+                    | 
+                    <i title="map" class="material-icons icon">map</i>
+                    Places I've been
+                </h1>
+            </header>
+        </section>
         <section>
             <article class="bg-g1">
-                <h2>
-                    <a class="icon" href="/">
-                        <amp-img width="32px" height="32px" layout="fixed" src="static/img/icon-home.png"></amp-img>
-                    </a>
-                    | Places I've been
-                </h2>
                 <div class="map">
 
 {{ template "map-svg" }}
