--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,9 @@
             </header>
             <article class="bg-g3">
                 <h2>
-                    <a href="/cv">
-                        <i title="cv" class="material-icons icon">description</i>
-                        CV
+                    <a href="/resume">
+                        <i title="resume" class="material-icons icon">description</i>
+                        Resume
                     </a>
                 </h2>
                 <p>
