--- a/src/resume.html
+++ b/src/resume.html
@@ -5,9 +5,9 @@
 
         {{ template "head" obj `
 {
-    "title":"CV | Sean Liao",
-    "description": "Sean Liao's CV",
-    "url": "seankhliao.com/cv",
+    "title":"Resume | Sean Liao",
+    "description": "Sean Liao's Resume",
+    "url": "seankhliao.com/resume",
     "imageUrl": ""
 }
 ` }}
