add google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       content="This is me, Sean Liao, hungry software dev, will code for food"
     />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="google-site-verification"
+      content="PcA6ADCwVhvsPmq1x3tHWX9IqDw_D6kPi3_dYOHDX7M"
+    />
 
     <link rel="canonical" href="https://seankhliao.com" />
     <!-- <link rel="manifest" href="{{ $manifest }}" /> -->
@@ -144,7 +148,6 @@
         margin: 0;
         width: 100%;
       }
-
       a,
       a:hover,
       a:visited {
