--- a/index.html
+++ b/index.html
@@ -243,12 +243,15 @@
       </p>
       <ul>
         <li>
-          <a href="mailto:seankhliao@gmail.com">Email</a> &mdash; if it's spam,
-          it goes to training gmail's spam filter
+          <a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam
         </li>
         <li>
           <a href="https://github.com/seankhliao">Github</a> &mdash; browsing
           for fun stuff to contribute to
+        </li>
+        <li>
+          <a href="https://github.com/erred">Home</a> &mdash; of old code,
+          decluttering my main profile
         </li>
         <li>
           <a href="https://instagram.com/seankhliao">Instagram</a> &mdash;
