change wording of org

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           for fun stuff to contribute to
         </li>
         <li>
-          <a href="https://github.com/erred">Home</a> &mdash; of old code,
+          <a href="https://github.com/erred">Github Org</a> &mdash; of old code,
           decluttering my main profile
         </li>
         <li>
