fix left edge clip

--- a/index.html
+++ b/index.html
@@ -206,12 +206,10 @@
 
       /* ===== map ===== */
       picture {
-        width: 100%;
-        margin: 10vh 2vw;
+        margin: 10vh 1vw;
       }
       picture img {
         width: 100%;
-        height: auto;
       }
     </style>
   </head>
@@ -241,7 +239,9 @@
       <h2>Hey</h2>
       <h3>I'm Sean</h3>
       <p>
-        Very bored software engineer. I'm working on filling out the map below.
+        Very bored software dev. I'm working on filling out the world map below.
+      </p>
+      <p>
         Some of the places you might find me:
       </p>
       <ul>
