--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
       article h3 {
         font-family: var(--serif);
       }
+      .hl {
+        color: var(--primary);
+      }
       ul {
         list-style: none;
         margin-top: 0;
@@ -237,9 +240,9 @@
 
     <article>
       <h2>Hey</h2>
-      <h3>I'm Sean</h3>
+      <h3>I'm <span class="hl">Sean</span></h3>
       <p>
-        Very bored software dev. I'm working on filling out the world map below.
+        Bored software dev. Likes to <span class="hl">travel</span> the world.
       </p>
       <p>
         Some of the places you might find me:
@@ -258,7 +261,7 @@
         </li>
         <li>
           <a href="https://instagram.com/seankhliao">Instagram</a> &mdash;
-          private, random states of mind
+          private, stream of consciousness
         </li>
         <li>
           <a
