more icon sizes

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,13 @@
     <link rel="canonical" href="https://seankhliao.com" />
 
     <!-- icons -->
-    <link rel="icon" href="./icon-512.png" />
     <link rel="apple-touch-icon" href="./icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="512x512" href="./icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="192x192" href="./icon-192.png" />
+    <link rel="icon" type="imgae/png" sizes="64x64" href="./icon-64.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
 
     <!-- facebook -->
     <meta property="og:url" content="https://seankhliao.com" />
