add web manifest

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     />
 
     <link rel="canonical" href="https://seankhliao.com" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- icons -->
     <link rel="apple-touch-icon" href="./icon-512.png" />
