--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
     </article>
     <picture>
       <source srcset="./map.webp" type="image/webp" />
-      <img src="./map.png" />
+      <img src="./map.png" alt="map of countries I've visited" />
     </picture>
   </body>
 </html>
