--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     <link rel="icon" type="imgae/png" sizes="64x64" href="./icon-64.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
-    <link rel="shortcut icon" href="/icons/favicon.ico" />
+    <link rel="shortcut icon" href="/icon.ico" />
 
     <!-- facebook -->
     <meta property="og:url" content="https://seankhliao.com" />
