--- a/src/lessons.html
+++ b/src/lessons.html
@@ -6,7 +6,6 @@
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
-    <link rel="preload" href="map.webp" as="image" />
     <link
       rel="preload"
       href="./Archivo.ttf"
@@ -29,19 +28,15 @@
       crossorigin="anonymous"
     />
 
-    <title>Sean Liao</title>
+    <title>Lessons Learned</title>
 
     <meta
       name="description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
+      content="Things that cost me time and money to learn"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="google-site-verification"
-      content="PcA6ADCwVhvsPmq1x3tHWX9IqDw_D6kPi3_dYOHDX7M"
-    />
 
-    <link rel="canonical" href="https://seankhliao.com" />
+    <link rel="canonical" href="https://seankhliao.com/lessons" />
     <link rel="manifest" href="/manifest.json" />
 
     <!-- icons -->
@@ -54,13 +49,13 @@
     <link rel="shortcut icon" href="/icon.ico" />
 
     <!-- facebook -->
-    <meta property="og:url" content="https://seankhliao.com" />
+    <meta property="og:url" content="https://seankhliao.com/lessons" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sean Liao" />
     <meta property="og:image" content="./icon-512.png" />
     <meta
       property="og:description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
+      content="Things that cost me time and money to learn"
     />
     <meta property="og:site_name" content="Sean Liao" />
     <meta property="og:locale" content="en_US" />
@@ -72,7 +67,7 @@
     <meta name="twitter:title" content="Sean Liao" />
     <meta
       name="twitter:description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
+      content="Things that cost me time and money to learn"
     />
     <meta name="twitter:image" content="./icon-512.png" />
 
@@ -81,7 +76,7 @@
     <meta itemprop="name" content="Sean Liao" />
     <meta
       itemprop="description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
+      content="Things that cost me time and money to learn"
     />
     <meta itemprop="image" content="./icon-512.png" />
 
@@ -141,7 +136,7 @@
         --white: #eceff1;
         --sans-serif: "Archivo", sans-serif;
         --serif: "Lora", serif;
-        font-size: 20px;
+        font-size: 18px;
       }
       body {
         align-items: center;
@@ -187,6 +182,10 @@
       h1:nth-child(n + 1):nth-child(-n + 4) {
         color: var(--primary);
       }
+      h2 {
+        font-family: var(--sans-serif);
+        font-size: 4vmin;
+      }
 
       /* ===== about me ===== */
       article {
@@ -194,111 +193,69 @@
         width: 90vw;
         max-width: 40em;
       }
-      article h3 {
+      h3 {
         font-family: var(--serif);
+        font-size: 1.563em;
       }
-      .hl {
+      h4 {
+        font-size: 1.25em;
+        margin-top: 0;
+      }
+      span {
         color: var(--primary);
       }
-      ul {
-        list-style: none;
-        margin-top: 0;
-        padding: 0;
+      article h4 {
+        margin-left: 1em;
       }
-      li {
-        padding: 0.25em;
-      }
-      li:before {
-        content: "»";
-        padding-right: 1ch;
-      }
-
-      /* ===== map ===== */
-      picture {
-        margin: 10vh 1vw;
-      }
-      picture img {
-        width: 100%;
+      article p {
+        margin-left: 2em;
       }
     </style>
   </head>
   <body>
     <header>
-      <hgroup>
-        <h1>S</h1>
-        <h1>E</h1>
-        <h1>A</h1>
-        <h1>N</h1>
-        <h1></h1>
-        <h1></h1>
-        <h1></h1>
-        <h1></h1>
-        <h1>K</h1>
-        <h1>.</h1>
-        <h1>H</h1>
-        <h1>.</h1>
-        <h1>L</h1>
-        <h1>I</h1>
-        <h1>A</h1>
-        <h1>O</h1>
-      </hgroup>
+      <a href="./">
+        <hgroup>
+          <h1>S</h1>
+          <h1>E</h1>
+          <h1>A</h1>
+          <h1>N</h1>
+          <h1></h1>
+          <h1></h1>
+          <h1></h1>
+          <h1></h1>
+          <h1>K</h1>
+          <h1>.</h1>
+          <h1>H</h1>
+          <h1>.</h1>
+          <h1>L</h1>
+          <h1>I</h1>
+          <h1>A</h1>
+          <h1>O</h1>
+        </hgroup>
+      </a>
+      <h2>Lessons learned the <span>hard</span> way</h2>
     </header>
 
     <article>
-      <h2>Hey</h2>
-      <h3>I'm <span class="hl">Sean</span></h3>
-      <p>
-        Bored software dev. Likes to <span class="hl">travel</span> the world.
-      </p>
-      <p>
-        Some of the places you might find me:
-      </p>
-      <ul>
-        <li>
-          <a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam
-        </li>
-        <li>
-          <a href="https://github.com/seankhliao">Github</a> &mdash; browsing
-          for fun stuff to contribute to
-        </li>
-        <li>
-          <a href="https://github.com/erred">Github Org</a> &mdash; of old code,
-          decluttering my main profile
-        </li>
-        <li>
-          <a href="https://instagram.com/seankhliao">Instagram</a> &mdash;
-          private, stream of consciousness
-        </li>
-        <li>
-          <a href="./lessons">Lessons</a>
-          &mdash; time and money have taught me many things
-        </li>
-        <li>
-          <a
-            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM"
-            >Spotify 2016 Playlist</a
-          >
-          &mdash; pop?
-        </li>
-        <li>
-          <a
-            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv"
-            >Spotify 2017 Playlist</a
-          >
-          &mdash; more pop?
-        </li>
-        <li>
-          <a
-            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE"
-            >Spotify 2018 Playlist</a
-          >
-          &mdash; getting sadder
-        </li>
-      </ul>
+      <h3>Google Cloud Platform</h3>
+        <h4>Set a <span>Budget</span></h4>
+        <p>
+          Surprise bills are not the nice kind of surprises
+        </p>
+      <h3>Google Cloud Functions</h3>
+        <h4>Watch the <span>Workload</span></h4>
+        <p>
+          Don't put CPU heavy or (network) IO heavy tasks here. You pay for both
+          CPU and wait times.
+        </p>
+      <h3>Google Kubernetes Engine</h3>
+      <section>
+        <h4>Avoid <span>fi-micro</span> nodes</h4>
+        <p>
+          At least if you want your cluster not to be held hostage by system
+          resources.
+        </p>
     </article>
-    <picture>
-      <source srcset="./map.webp" type="image/webp" />
-      <img src="./map.png" alt="map of countries I've visited" />
-    </picture>
   </body>
 </html>
