--- a/src/lessons.html
+++ b/src/lessons.html
@@ -6,27 +6,7 @@
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
-    <link
-      rel="preload"
-      href="./Archivo.ttf"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="./Archivo-Bold.ttf"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="./Lora.ttf"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-    />
+    <link rel="preload" href="/base.css" as="style" />
 
     <title>Lessons Learned</title>
 
@@ -93,116 +73,12 @@
       gtag("config", "UA-114337586-1");
     </script>
 
+    <link rel="stylesheet" href="/base.css" />
     <style>
-      @font-face {
-        font-display: fallback;
-        font-family: "Archivo";
-        font-style: normal;
-        font-weight: 400;
-        src: local("Archivo Regular"), local("Archivo-Regular"),
-          url(/Archivo.ttf) format("ttf");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-          U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-      @font-face {
-        font-display: fallback;
-        font-family: "Archivo";
-        font-style: normal;
-        font-weight: 700;
-        src: local("Archivo Bold"), local("Archivo-Bold"),
-          url(/Archivo-Bold.ttf) format("ttf");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-          U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-      @font-face {
-        font-display: fallback;
-        font-family: "Lora";
-        font-style: normal;
-        font-weight: 400;
-        src: local("Lora Regular"), local("Lora-Regular"),
-          url(/Lora.ttf) format("ttf");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-          U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      :root {
-        --black: #000000;
-        --primary: #a06be0;
-        --white: #eceff1;
-        --sans-serif: "Archivo", sans-serif;
-        --serif: "Lora", serif;
-        font-size: 18px;
-      }
-      body {
-        align-items: center;
-        background-color: var(--black);
-        color: var(--white);
-        display: flex;
-        flex-flow: column nowrap;
-        font-family: var(--sans-serif);
-        margin: 0;
-        width: 100%;
-      }
-      a,
-      a:hover,
-      a:visited {
-        color: inherit;
-        text-decoration: none;
-        font-weight: 700;
-      }
-
-      /* ===== header ===== */
-      header {
-        align-items: flex-start;
-        display: flex;
-        flex-direction: column;
-        font-family: var(--serif);
-        justify-content: flex-end;
-        min-height: 90vh;
-        padding: 8vmin 5vmin;
-        width: 100%;
-      }
-      hgroup {
-        display: grid;
-        grid: repeat(2, 10vmin) / repeat(8, 10vmin);
-        max-width: 50rem;
-        width: 90vmin;
-      }
-      h1 {
-        margin: 0;
-        width: 10vmin;
-        height: 10vmin;
-        font-size: 5vmin;
-      }
-      h1:nth-child(n + 1):nth-child(-n + 4) {
-        color: var(--primary);
-      }
-      h2 {
-        font-family: var(--sans-serif);
-        font-size: 4vmin;
-      }
-
-      /* ===== about me ===== */
       article {
         margin: 10vh auto;
-        width: 90vw;
         max-width: 40em;
-      }
-      h3 {
-        font-family: var(--serif);
-        font-size: 1.563em;
-      }
-      h4 {
-        font-size: 1.25em;
-        margin-top: 0;
-      }
-      span {
-        color: var(--primary);
+        width: 90vw;
       }
       article h4 {
         margin-left: 1em;
@@ -214,12 +90,12 @@
   </head>
   <body>
     <header>
-      <a href="./">
+      <a href="/">
         <hgroup>
-          <h1>S</h1>
-          <h1>E</h1>
-          <h1>A</h1>
-          <h1>N</h1>
+          <h1><span>S</span></h1>
+          <h1><span>E</span></h1>
+          <h1><span>A</span></h1>
+          <h1><span>N</span></h1>
           <h1></h1>
           <h1></h1>
           <h1></h1>
