--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
     <link rel="preload" href="/base.css" as="style" />
-    <link rel="preload" href="map.webp" as="image" />
+    <link rel="preload" href="/map.webp" as="image" />
 
     <title>Sean Liao</title>
 
@@ -25,10 +25,10 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- icons -->
-    <link rel="apple-touch-icon" href="./icon-512.png" />
-    <link rel="icon" type="imgae/png" sizes="512x512" href="./icon-512.png" />
-    <link rel="icon" type="imgae/png" sizes="192x192" href="./icon-192.png" />
-    <link rel="icon" type="imgae/png" sizes="64x64" href="./icon-64.png" />
+    <link rel="apple-touch-icon" href="/icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="512x512" href="/icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="192x192" href="/icon-192.png" />
+    <link rel="icon" type="imgae/png" sizes="64x64" href="/icon-64.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
     <link rel="shortcut icon" href="/icon.ico" />
@@ -54,7 +54,7 @@
       name="twitter:description"
       content="This is me, Sean Liao, hungry software dev, will code for food"
     />
-    <meta name="twitter:image" content="./icon-512.png" />
+    <meta name="twitter:image" content="/icon-512.png" />
 
     <!-- schema.org / google -->
     <link rel="author" href="Sean Liao" />
@@ -63,7 +63,7 @@
       itemprop="description"
       content="This is me, Sean Liao, hungry software dev, will code for food"
     />
-    <meta itemprop="image" content="./icon-512.png" />
+    <meta itemprop="image" content="/icon-512.png" />
 
     <script
       async
@@ -145,7 +145,7 @@
           private, stream of consciousness
         </li>
         <li>
-          <a href="./lessons">Lessons</a>
+          <a href="/lessons">Lessons</a>
           &mdash; time and money have taught me many things
         </li>
         <li>
@@ -172,8 +172,8 @@
       </ul>
     </article>
     <picture>
-      <source srcset="./map.webp" type="image/webp" />
-      <img src="./map.png" alt="map of countries I've visited" />
+      <source srcset="/map.webp" type="image/webp" />
+      <img src="/map.png" alt="map of countries I've visited" />
     </picture>
   </body>
 </html>
