--- a/src/lessons.html
+++ b/src/lessons.html
@@ -20,10 +20,10 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- icons -->
-    <link rel="apple-touch-icon" href="./icon-512.png" />
-    <link rel="icon" type="imgae/png" sizes="512x512" href="./icon-512.png" />
-    <link rel="icon" type="imgae/png" sizes="192x192" href="./icon-192.png" />
-    <link rel="icon" type="imgae/png" sizes="64x64" href="./icon-64.png" />
+    <link rel="apple-touch-icon" href="/icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="512x512" href="/icon-512.png" />
+    <link rel="icon" type="imgae/png" sizes="192x192" href="/icon-192.png" />
+    <link rel="icon" type="imgae/png" sizes="64x64" href="/icon-64.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
     <link rel="shortcut icon" href="/icon.ico" />
@@ -32,7 +32,7 @@
     <meta property="og:url" content="https://seankhliao.com/lessons" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sean Liao" />
-    <meta property="og:image" content="./icon-512.png" />
+    <meta property="og:image" content="/icon-512.png" />
     <meta
       property="og:description"
       content="Things that cost me time and money to learn"
@@ -49,7 +49,7 @@
       name="twitter:description"
       content="Things that cost me time and money to learn"
     />
-    <meta name="twitter:image" content="./icon-512.png" />
+    <meta name="twitter:image" content="/icon-512.png" />
 
     <!-- schema.org / google -->
     <link rel="author" href="Sean Liao" />
@@ -58,7 +58,7 @@
       itemprop="description"
       content="Things that cost me time and money to learn"
     />
-    <meta itemprop="image" content="./icon-512.png" />
+    <meta itemprop="image" content="/icon-512.png" />
 
     <script
       async
