--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,8 @@
       gtag("config", "UA-114337586-1");
     </script>
 
-    <link rel="stylesheet" href="/base.css" />
+    <!-- <link rel="stylesheet" href="/base.css" /> -->
+    <link rel="stylesheet" href="../static/base.css" />
     <style>
       article {
         margin: 10vh auto;
@@ -116,18 +117,20 @@
           <h1>O</h1>
         </hgroup>
       </a>
-      <h2>Hungry dev: will <span>code</span> for food</h2>
     </header>
 
     <article>
-      <h3>Hey</h3>
-      <h4>I'm <span class="hl">Sean</span></h4>
-      <p>
-        Bored software dev. Likes to <span class="hl">travel</span> the world.
-      </p>
-      <p>
-        Some of the places you might find me:
-      </p>
+      <h3>Hey, I'm Sean</h3>
+
+      <h4><span class="hl">Code</span> 4 Food</h4>
+      <ul>
+        <li>
+          <a href="/learned">Learned</a>
+          &mdash; time and money have taught me many things
+        </li>
+      </ul>
+
+      <h4>Where to <span>Find</span> Me</h4>
       <ul>
         <li>
           <a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam
@@ -140,20 +143,16 @@
           <a href="https://github.com/erred">Github Org</a> &mdash; of old code,
           decluttering my main profile
         </li>
-        <li>
-          <a href="https://instagram.com/seankhliao">Instagram</a> &mdash;
-          private, stream of consciousness
-        </li>
-        <li>
-          <a href="/lessons">Lessons</a>
-          &mdash; time and money have taught me many things
-        </li>
+      </ul>
+
+      <h4>Get Into My <span>Mind</span></h4>
+      <ul>
         <li>
           <a
-            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM"
-            >Spotify 2016 Playlist</a
+            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE"
+            >Spotify 2018 Playlist</a
           >
-          &mdash; pop?
+          &mdash; getting sadder
         </li>
         <li>
           <a
@@ -164,10 +163,57 @@
         </li>
         <li>
           <a
-            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE"
-            >Spotify 2018 Playlist</a
+            href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM"
+            >Spotify 2016 Playlist</a
           >
-          &mdash; getting sadder
+          &mdash; pop?
+        </li>
+        <li>
+          <a href="https://instagram.com/seankhliao">Instagram</a> &mdash;
+          private, stream of consciousness
+        </li>
+      </ul>
+
+      <h4><span>Travel</span> Log</h4>
+      <p>Really going places</p>
+      <ul>
+        <!-- prettier-ignore -->
+        <li>
+          England &mdash; <span>2009 - 2011</span>
+        </li>
+        <li>
+          Hong Kong &mdash; 2017-08
+        </li>
+        <li>
+          Indonesia &mdash; 2017-02, 2017-08, 2018-02, 2018-12
+        </li>
+        <li>
+          India &mdash; 2015-08
+        </li>
+        <li>
+          Japan &mdash; 2018-03
+        </li>
+        <li>
+          S. Korea &mdash; 2018-06
+        </li>
+        <li>
+          Philipines &mdash; 2017-08
+        </li>
+        <!-- prettier-ignore -->
+        <li>
+          Russia &mdash; <span>2000 - 2005</span>
+        </li>
+        <li>
+          Sweden &mdash; 2018-01
+        </li>
+        <li>
+          Singapore &mdash; 2017-01
+        </li>
+        <li>
+          Taiwan &mdash; <span>1996 - 2000, 2005 - 2009, 2011 - 2019</span>
+        </li>
+        <li>
+          Timor-Leste &mdash; 2018-02
         </li>
       </ul>
     </article>
