fix base css route

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,6 @@
       content="This is me, Sean Liao, hungry software dev, will code for food"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="google-site-verification"
-      content="PcA6ADCwVhvsPmq1x3tHWX9IqDw_D6kPi3_dYOHDX7M"
-    />
 
     <link rel="canonical" href="https://seankhliao.com" />
     <link rel="manifest" href="/manifest.json" />
@@ -32,29 +28,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icon-16.png" />
     <link rel="shortcut icon" href="/icon.ico" />
-
-    <!-- facebook -->
-    <meta property="og:url" content="https://seankhliao.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sean Liao" />
-    <meta property="og:image" content="./icon-512.png" />
-    <meta
-      property="og:description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
-    />
-    <meta property="og:site_name" content="Sean Liao" />
-    <meta property="og:locale" content="en_US" />
-
-    <!-- twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="@seankhliao" />
-    <meta name="twitter:url" content="https://seankhliao.com" />
-    <meta name="twitter:title" content="Sean Liao" />
-    <meta
-      name="twitter:description"
-      content="This is me, Sean Liao, hungry software dev, will code for food"
-    />
-    <meta name="twitter:image" content="/icon-512.png" />
 
     <!-- schema.org / google -->
     <link rel="author" href="Sean Liao" />
@@ -78,8 +51,8 @@
       gtag("config", "UA-114337586-1");
     </script>
 
-    <!-- <link rel="stylesheet" href="/base.css" /> -->
-    <link rel="stylesheet" href="../static/base.css" />
+    <link rel="stylesheet" href="/base.css" />
+    <!-- <link rel="stylesheet" href="../static/base.css" /> -->
     <style>
       article {
         margin: 10vh auto;
