--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,13 @@
       gtag("js", new Date());
       gtag("config", "UA-114337586-1");
     </script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function() {
+          navigator.serviceWorker.register("/sw.js");
+        });
+      }
+    </script>
 
     <link rel="stylesheet" href="/base.css" />
     <!-- <link rel="stylesheet" href="../static/base.css" /> -->
